# elevenx

./: package-lock.json  package.json
base44/: .app.jsonc
base44/entities/: Bet.jsonc  BetOffer.jsonc  FuturesMarket.jsonc  Match.jsonc  User.jsonc  UserBet.jsonc
src/: App.jsx  BETPOSITION_OUTCOME_FIX_AUDIT.md  CLAIM_FLOW_DEBUG_REPORT.md  CLAIM_WINNINGS_FUNCTION.md  COMPLETE_TEST_GUIDE_PARIMUTUEL.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STEPS.md  DEPLOY_SOLANA_PROGRAM.md  DISCRIMINATOR_VERIFICATION.md  FUTURES_BET_STATUS_FIX.md  INTEGRATION_CHECKLIST.md  LP_FEE_SHARING_COMPLETE.md  ORACLE_IMPLEMENTATION_SUMMARY.md  ORACLE_INTEGRATION.md  PERMANENT_FIX_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_START_FIXED.md  README.md  SECURITY_AUDIT_SUMMARY.md  SMART_CONTRACT_INTEGRATION_GUIDE.md  STATUS.md  TESTING_GUIDE.md  TESTING_GUIDE_CONSOLIDATED.md  TEST_LP_FEE_SHARING.md  index.css
src/api/: base44Client.js
src/lib/: AuthContext.jsx  WalletContext.jsx  directFunctionCall.js
src/pages/: Admin.jsx  BetDetail.jsx  DebugClaim.jsx  DebugProgramId.jsx  Diagnostics.jsx  Docs.jsx  FixAdmin.jsx  Futures.jsx  Groups.jsx  Home.jsx  InitPlatform.jsx  Login.jsx  LpDashboard.jsx  MatchDetail.jsx  Matches.jsx  (+5 more)
src/solana-programs/elevenx-betting/programs/elevenx-betting/: Cargo.toml
src/solana-programs/elevenx-betting/programs/elevenx-betting/src/: errors.rs  lib.rs
src/solana-programs/elevenx-betting/programs/elevenx-betting/src/instructions/: claims.rs  market.rs  oracle.rs  platform.rs
src/solana-programs/elevenx-betting/programs/elevenx-betting/src/state/: platform.rs
(+166 files in other folders)
