[package]
name = "elevenx-betting"
version = "0.1.0"
description = "ElevenX P2P Betting Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "elevenx_betting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"