[package]
name = "elevenx-betting"
version = "0.1.0"
description = "ElevenX P2P Betting Smart Contract — Solana/Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "elevenx_betting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
testing = []

[dependencies]
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
switchboard-on-demand = "0.1.0"
wit-bindgen = "=0.24.0"